# Coinbase-Websocket

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs  main.rs
src/models/: ticker.rs
src/websocket/: client.rs
