[package]
name = "rust-websocket-client"
version = "0.1.0"
edition = "2021"

# [dependencies]
# tokio = { version = "1.36", features = ["full"] }
# tokio-tungstenite = "0.21"
# futures-util = "0.3"
# url = "2.5"

[dependencies]
# Async runtime for Rust
tokio = { version = "1.34", features = ["full"] }

# WebSocket client implementation
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# Utilities for working with async streams
futures-util = "0.3.29"

# JSON serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"

# Logging (optional but recommended)
log = "0.4"
env_logger = "0.11"

chrono = "0.4"